Ohako/stylesheets/viewHomeVenue.css
#homeVenue{
	display: none;
	background-color: #3e3e3e;;
}

#homeChatBoxDiv{
	position:relative;
	height:255px;
	width:360px;
	overflow:hidden;

	font-size: 10pt;
}

#chatUsers{
	height: 249px;
	width: 89px;
	margin-top:5px;
	position:relative;
	float:left;
	background-image: url("whiteBackgroundT.png");

	border-right: 2px outset white;

	z-index: 2;

	text-align: center;
}

#chatBox{
	position: relative;
	height: 209px;
	width: 257px;
	float:right;
	padding:5px;
	margin-top:5px;
	border: 1px solid black;
	border-bottom: 2px solid #3e3e3e;
	border-left: 1px solid #FFE0C0;
	border-right: 1px solid #FFE0C0;
	background-color: #cccccc;

	font-family: 'Raleway', sans-serif;	
	font-weight: bold;
	color: #ffffff;
	text-shadow: 0 0 5px #ffb400;
	overflow-y: auto;
	text-align:  left;

	z-index: 1;
}

#chatBoxScroll{
	position:relative;
	height:100%;
	width:100%;
}

#chatBoxInputDiv{
	height:24px;
	padding-top:1px;
	padding-left:2px;
	width:265px;
	position:relative;
	float:left;
	border: 1px solid black;
	border-left: 1px solid #FFE0C0;
	border-right: 1px solid #FFE0C0;
	background-color: #858585;
}

#chatBoxInputDiv input{
	width:256px;
}

#usersLogo{
	text-align: center;
	margin: auto;
}

#chatUsersList{
	padding: 5px;
	font-size: 9pt;
	width: 80px;
	margin: auto;

	overflow: hidden;

	float: left;
	text-align: left;
}

.chatMessage {
	clear:both;
	max-width:215px;
	border:1px solid white;
	border-radius:8px;
	margin:2px;
	padding:4px;
}

.chatMessageDetails{
	float:left;
	clear:both;
	font-weight:default;
}

.recievedChat{
	float:left;
}

.sentChat{
	float:right;
}

.userProfile{
	background-color: #f2f2f2;
	margin-bottom: 2px;
	border: 1px outset white;
	padding: 2px;

	cursor:pointer;
}

